--- a/custom-user/pom.xml
+++ b/custom-user/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.github.weichun97</groupId>
         <artifactId>spring-security-study</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.chun</groupId>
-    <artifactId>spring-security-study</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>spring-security-study</name>
+
+    <artifactId>custom-user</artifactId>
+    <name>custom-user</name>
     <description>Demo project for Spring security</description>
 
     <properties>
