--- a/remember-me/pom.xml
+++ b/remember-me/pom.xml
@@ -7,8 +7,8 @@
         <artifactId>spring-security-study</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>validate-code</artifactId>
-    <name>validate-code</name>
+    <artifactId>remember-me</artifactId>
+    <name>remember-me</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -22,19 +22,29 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
-
-        <!-- hutool -->
         <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
         <!-- 图形验证码 -->
         <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-config</artifactId>
+        </dependency>
+
+        <!-- mysql -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <!-- mysql -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
         </dependency>
 
         <dependency>
